app/film-database/components/carousel/_genericCarousel.scss
@use '/app/base/sass/util/functions' as f;
@use '/app/film-database/scss/fdMixins' as m;

.genericCarousel {
  padding-bottom: calc(var(--fd-gap) * 2);
  transition: all 280ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
  &[data-anim='disabled'] {
    opacity: 0;
    pointer-events: none;
  }
  &__header {
    width: fit-content;
    padding: 0 calc(var(--fd-carousel-node-width) / 4) var(--fd-gap) calc(var(--fd-padding-generic) / 1.5);
    text-transform: capitalize;
    & h2 {
      @include m.fdFontXL;
    }
  }
  &__wrapper {
    position: relative;
    width: 100%;
    // navigation overlay on track hover
    &:hover &__navigation {
      opacity: 1;
      transition: opacity 0.22s ease-in-out;
    }
    &__ul {
      display: flex;
      gap: var(--fd-gap);
      overflow-x: scroll;
      overflow-y: clip;
      touch-action: pan-x;
      scrollbar-width: none;
      scroll-behavior: smooth;
      &[data-modal='cinemaInformation'],
      &[data-modal='person'] {
        & li {
          width: var(--fd-collection-node-width);
          height: var(--fd-collection-node-height);

          & button {
            display: flex;
            flex-direction: column;
            justify-content: space-evenly;
            gap: 14px;
            width: inherit;
            height: inherit;
            & picture {
              flex: 1 1 auto;
              // Button Gap, Div Line Heights Padding, Large Font, Medium Font,
              max-height: calc(100% - (14px + 14px + 1.5rem + 1.125rem));
            }
            & div {
              flex: 1 0 auto;
              display: flex;
              flex-direction: column;
              align-items: flex-start;
              & span {
                text-transform: capitalize;
              }
              & span:nth-of-type(1) {
                @include m.fdFontL;
                white-space: wrap;
              }
              & span:nth-of-type(2) {
                @include m.fdFontM;
              }
            }
          }
        }
      }
      &__li {
        position: relative;
        width: var(--fd-carousel-node-width);
        height: var(--fd-carousel-node-height);
        cursor: pointer;
        &:first-of-type {
          margin-left: calc(var(--fd-padding-generic) / 1.5);
        }
        &:last-of-type {
          margin-right: calc(var(--fd-padding-generic) / 1.5);
        }
        &[data-hidden='true'] {
          & picture img {
            display: none;
          }
        }
        &:hover .genericCarousel__wrapper__ul__li__overlay {
          opacity: 1;
          cursor: pointer;
          &--play svg {
            transform: scale(1.3) rotate(0deg);
          }
        }
        &:not(:hover) .genericCarousel__wrapper__ul__li__collections[data-active='true'] {
          opacity: 0;
        }
        & picture {
          border-radius: var(--fd-border-radius);
          overflow: clip;
        }
        & picture,
        & picture img {
          display: block;
          width: inherit;
          height: 100%;
        }
        &__overlay {
          position: absolute;
          inset: 0;
          z-index: 3;
          width: inherit;
          height: inherit;
          background-color: var(--fd-bc-hover-poster);
          opacity: 0;
          transition: opacity 0.3s ease-in-out;
          & button {
            position: absolute;
            & svg {
              width: 1.8em;
              height: 1.8em;
              color: var(--fd-font-color-primary);
            }
          }
          &--collections {
            z-index: 4;
            top: calc(var(--fd-gap) / 2);
            right: calc(var(--fd-gap) / 4);
          }
          &--play {
            display: grid;
            place-items: center;
            width: inherit;
            height: inherit;
            & svg {
              transform: scale(0.8) rotate(45deg);
              transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
            }
          }
        }
        &__collections {
          position: absolute;
          top: calc(var(--fd-gap) * 3);
          right: var(--fd-gap);
          z-index: 5;
          display: flex;
          flex-direction: column;
          border: 1px solid rgba(16 18 27 / 40%);
          border-radius: var(--fd-border-radius);
          overflow: clip;
          background-color: var(--fd-bc-offset);
          transition: all 0.2s ease;
          &[data-active='false'] {
            opacity: 0;
            pointer-events: none;
          }
          &[data-active='true'] {
            transform: translateY(calc(var(--fd-gap) / 4));
            opacity: 1;
            pointer-events: all;
          }
          & li {
            &:hover {
              background-color: var(--fd-bc-btn);
            }
            &:first-of-type button {
              border-top-left-radius: var(--fd-border-radius);
              border-top-right-radius: var(--fd-border-radius);
            }
            &:last-of-type button {
              border-bottom-right-radius: var(--fd-border-radius);
              border-bottom-left-radius: var(--fd-border-radius);
            }
            & button {
              padding: calc(var(--fd-gap) / 2);
              @include m.fdFontS;
              color: var(--fd-font-color-primary);
              white-space: nowrap;
            }
          }
          &__mtnc {
            & button {
              display: flex;
              gap: 4px;
              & svg {
                width: 1.2em;
                aspect-ratio: 1/1;
              }
            }
          }
        }
      }
    }
    &__navigation {
      position: absolute;
      top: 0;
      left: 0;
      z-index: 5;
      display: flex;
      align-items: center;
      width: 100%;
      height: 100%;
      pointer-events: none;
      opacity: 0;
      // Greyzone/crosspath for desktop 1280x720 && tablet
      @media (width <= 1152px) {
        display: none;
      }
      &--button {
        position: absolute;
        z-index: 10;
        height: 50%;
        background-color: var(--fd-bc-btn);
        pointer-events: all;
        & svg {
          width: 3em;
          height: 3em;
          color: var(--fd-font-color-primary);
        }
      }
      &--button:nth-of-type(1) {
        left: 0;
        border-top-right-radius: var(--fd-border-radius);
        border-bottom-right-radius: var(--fd-border-radius);
      }
      &--button:nth-of-type(2) {
        right: 0;
        border-top-left-radius: var(--fd-border-radius);
        border-bottom-left-radius: var(--fd-border-radius);
      }
    }
  }
}

